Ajustes posições de itens

--- a/whp-hp.html
+++ b/whp-hp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>whp-hp</title>
+    <title>PowerWheel Converter</title>
     <link rel="stylesheet" href="./whp-hpstyle.css">
 </head>
 
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="inputs">
             <h1><strong>CONVERSOR WHP - HP</strong>
-            </br>WHP = potência nas rodas </br> HP potência no motor</h1> </br>
+            </br>WHP = Potência nas rodas </br> HP = Potência no motor</h1> </br>
             <div id="tipohp"></div>
             <div id="tipowhp"></div>  
             <div id="elements">
@@ -22,12 +22,12 @@
                 <div id="swhp2"></div>
                 <div id="res"></div>
                 <input type="button" value="=" id="ress" onclick="calc()"></br>
-                <p2>Tração</p2></br>
-                <p1>HP
-                <input type="checkbox" name="checkhp" id="markhp" onclick="validate()"></p1>
-                <p1>WHP
-                <input type="checkbox" name="chekwhp" id="markwhp" onclick="validate()"></br></p1>
-                    
+                
+                <p1>
+                <input type="checkbox" name="checkhp" id="markhp" onclick="validate()">HP</p1>
+                <p1>
+                <input type="checkbox" name="chekwhp" id="markwhp" onclick="validate()">WHP</br></p1>
+                <p2>Tração</p2></br>    
                 <p>
                 <input type="checkbox" name="dianteria" id="tractiond" onclick="validate()"> Dianteira</p>
 
