add obs checkbox and fix bugs

--- a/whp-hp.html
+++ b/whp-hp.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="inputs">
-            <h1><strong>CONVERSOR WHP - HP</strong>
+            <h1><strong>CONVERSOR WHP - HP</strong>  
             </br>WHP = Potência nas rodas </br> HP = Potência no motor</h1> </br>
             <div id="tipohp"></div>
             <div id="tipowhp"></div>  
@@ -35,6 +35,19 @@
                 <p>
                 <input type="checkbox" name="integral" id="tractioni" onclick="validate()"> Integral</p>
             </div>
+            <div id="obsdianteira">
+                <p3>• Tração Dianteira (FWD - Front-Wheel Drive):</br>
+                        Geralmente, as perdas de potência nesta configuração podem variar de 10% a 20%.</br>
+                        A tração dianteira tende a ter perdas relativamente menores devido à simplicidade da transmissão.</p3></div>
+            <div id="obstraseira">
+                <p3>• Tração Traseira (RWD - Rear-Wheel Drive):</br>
+                        As perdas de potência podem variar entre 15% e 25%.</br>
+                        A tração traseira, devido à complexidade adicional da transmissão e ao comprimento do eixo de transmissão,</br>
+                        pode ter perdas um pouco maiores em comparação com a tração dianteira.</p3></div>
+            <div id="obsintegral">
+                <p3>• Tração Integral (AWD/4WD - All-Wheel Drive/4-Wheel Drive):</br>
+                        Este tipo de tração geralmente apresenta perdas de potência mais significativas, variando de 20% a 30%.</br>
+                        A complexidade adicional dos componentes de transmissão e a necessidade de distribuir potência entre todas as rodas contribuem para essas perdas.</p3></div>
             
             
         </div>
