--- a/whp-hp.html
+++ b/whp-hp.html
@@ -16,7 +16,7 @@
             <div id="tipowhp"></div>  
             <div id="elements">
                 <div id="shp1"></div>         
-                <input type="number" name="hp-motor" id="hp" onclick="calc()"></br>
+                <input type="number" name="hp-motor" id="hp" onkeyup="calc()" maxlength="6"></br>
                 <div id="shp2"></div>
                 <div id="res"></div>
                 <input type="button" value="=" id="ress" onclick="calc()"></br>
